--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;1,300&display=swap');
+
 body {
     background-color: #1A1A1A;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 .mainDiv {
     margin: auto;
-    width: 60%;
+    width: 85%;
     padding: 10px;
 }
 
@@ -20,5 +22,5 @@ p {
     text-align: center;
     line-height: 100px;
     color: #FFFFFF;
-    font-size: 25px;
+    font-size: 1.5vw;
 }
